Add JWT library enhancements and new exception handling
- Introduced ExpiredException class to handle expired JWTs with payload access.
- Implemented JWK class for parsing JSON Web Key Sets and individual keys.
- Enhanced JWT class with improved decoding and encoding methods, including support for EdDSA.
- Added JWTExceptionWithPayloadInterface for exceptions that carry payload information.
- Created Key class to encapsulate key material and associated algorithms.
- Added SignatureInvalidException for handling signature verification failures.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	"require": {
 		"php": ">=5.3.7",
 		"guzzlehttp/guzzle": "7.0",
-		"vlucas/phpdotenv": "*"
+		"vlucas/phpdotenv": "*",
+		"firebase/php-jwt": "*"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
